--- a/login.html
+++ b/login.html
@@ -1,1 +1,8 @@
-login page.
+<form class="form-horizontal" method="post">
+	<h2>Login</h2>
+	<input type="text" class="input-block-level" id="inputEmail" placeholder="Email" name="userid" autocomplete="off" style="cursor: auto; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=);">
+	<input type="password" class="input-block-level" id="inputPassword" placeholder="Password" name="password" autocomplete="off" style="cursor: auto; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=);">
+	<input class="btn btn-primary" type="submit" value="Login">
+</form>
+<hr>
+<button onclick="window.playsound = !window.playsound">toggle sound</button>
